--- a/index.html
+++ b/index.html
@@ -5,24 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>About Me</title>
 </head>
 
 <body>
-    <header>
-        <h1>Andrew Weiss</h1>
-        <nav>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <main>
-        <h2>About Me</h2>
-        <hr>
-        <img src="assets/images/Me.jpg" alt="Picture of me">
-        <p>Text goes here</p>
-    </main>
+    <div class="flex-container">
+        <div>
+            <h1>Andrew Weiss</h1>
+        </div>
+        <div class="navigation">
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+        </div>
+    </div>
+    <div class="container">
+        <main>
+            <h2>About Me</h2>
+            <hr>
+            <img src="assets/images/Me.jpg" height="200" width="300" alt="Picture of me">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, nemo voluptate. Nesciunt odio sit odit?
+                Et, adipisci tempora soluta voluptatibus sunt amet iusto dolor nam unde aut quas neque impedit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, atque eligendi? Eum, debitis at
+                perferendis similique iusto deleniti, in reiciendis optio expedita nobis libero quasi. Id quisquam
+                inventore commodi quia.</p>
+        </main>
+    </div>
     <footer>
         <p>Copyright &copy;</p>
     </footer>
