--- a/portfolio.html
+++ b/portfolio.html
@@ -5,18 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>About Me</title>
 </head>
 
 <body>
-    <header>
-        <h1>Andrew Weiss</h1>
-        <nav>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
+    <div class="container">
+        <header>
+            <h1>Andrew Weiss</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+    <div class="container">
     <main>
         <h2>Portfolio</h2>
         <hr>
