--- a/contact.html
+++ b/contact.html
@@ -5,31 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>About Me</title>
 </head>
 
 <body>
-    <header>
-        <h1>Andrew Weiss</h1>
-        <nav>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
+    <div class="container">
+        <header>
+            <h1>Andrew Weiss</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+    <div class="container">
     <main>
         <h2>Contact</h2>
         <hr>
         <form>
-            <p>Name
+            <span>Name</span>
                 <input type="text" name="username" size="50" maxlength="30">
-            </p>
-            <p>Email
+            <span>Email</span>
                 <input type="text" name="username" size="50" maxlength="30">
-            </p>
-            <p>Message
-                <textarea name="comments" size="50" cols="20" rows="4"></textarea>
-            </p>
+            <span>Message</span>
+                <textarea name="comments" cols="20" rows="4"></textarea>
+            <button>Submit</button>
         </form>
     </main>
     <footer>
