Update and nearly complete

--- a/index.html
+++ b/index.html
@@ -10,33 +10,47 @@
 </head>
 
 <body>
-    <div class="flex-container">
-        <div>
-            <h1>Andrew Weiss</h1>
+    <div class="page-container">
+        <!--Header and Navigation-->
+        <header class="flex-container">
+            <nav>
+                <h1>Andrew Weiss</h1>
+                <div class="navigation">
+                    <ul>
+                        <li class="link"><a href="index.html">About</a></li>
+                        <li class="link"> <a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <!--Main Content-->
+        <div class="container">
+            <main>
+                <h2>About Me</h2>
+                <hr>
+                <img class="profile-pic" src="assets/images/Me.jpg" alt="Picture of me">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, nemo voluptate. Nesciunt odio sit
+                    odit?
+                    Et, adipisci tempora soluta voluptatibus sunt amet iusto dolor nam unde aut quas neque impedit.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, atque eligendi? Eum, debitis at
+                    perferendis similique iusto deleniti, in reiciendis optio expedita nobis libero quasi. Id quisquam
+                    inventore commodi quia. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, atque eligendi? Eum, debitis at
+                    perferendis similique iusto deleniti, in reiciendis optio expedita nobis libero quasi. Id quisquam
+                    inventore commodi quia.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, atque eligendi? Eum, debitis at
+                    perferendis similique iusto deleniti, in reiciendis optio expedita nobis libero quasi. Id quisquam
+                    inventore commodi quia. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, atque eligendi? Eum, debitis at
+                    perferendis similique iusto deleniti, in reiciendis optio expedita nobis libero quasi. Id quisquam
+                    inventore commodi quia. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, atque eligendi? Eum, debitis at
+                    perferendis similique iusto deleniti, in reiciendis optio expedita nobis libero quasi. Id quisquam
+                    inventore commodi quia.</p>
+            </main>
         </div>
-        <div class="navigation">
-                <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-        </div>
+        <footer>
+            <p class="copyright">Copyright &copy;</p>
+        </footer>
     </div>
-    <div class="container">
-        <main>
-            <h2>About Me</h2>
-            <hr>
-            <img src="assets/images/Me.jpg" height="200" width="300" alt="Picture of me">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, nemo voluptate. Nesciunt odio sit odit?
-                Et, adipisci tempora soluta voluptatibus sunt amet iusto dolor nam unde aut quas neque impedit.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, atque eligendi? Eum, debitis at
-                perferendis similique iusto deleniti, in reiciendis optio expedita nobis libero quasi. Id quisquam
-                inventore commodi quia.</p>
-        </main>
-    </div>
-    <footer>
-        <p>Copyright &copy;</p>
-    </footer>
 </body>
 
 </html>
