--- a/contact.html
+++ b/contact.html
@@ -6,38 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>About Me</title>
+    <title>Contact</title>
 </head>
 
 <body>
-    <div class="container">
-        <header>
+    <!--Header and Navigation-->
+    <header class="flex-container">
+        <nav>
             <h1>Andrew Weiss</h1>
-            <nav>
+            <div class="navigation">
                 <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li class="link"><a href="index.html">About</a></li>
+                    <li class="link"> <a href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-            </nav>
-        </header>
-    </div>
+            </div>
+        </nav>
+    </header>
+    <!--Main Content-->
     <div class="container">
-    <main>
-        <h2>Contact</h2>
-        <hr>
-        <form>
-            <span>Name</span>
+        <main>
+            <h2>Contact</h2>
+            <hr>
+            <form>
+                <span>Name</span>
+                <br>
                 <input type="text" name="username" size="50" maxlength="30">
-            <span>Email</span>
+                <br>
+                <span>Email</span>
+                <br>
                 <input type="text" name="username" size="50" maxlength="30">
-            <span>Message</span>
+                <br>
+                <span>Message</span>
+                <br>
                 <textarea name="comments" cols="20" rows="4"></textarea>
-            <button>Submit</button>
-        </form>
-    </main>
+                <br>
+                <button>Submit</button>
+            </form>
+        </main>
+    </div>
     <footer>
-        <p>Copyright &copy;</p>
+        <p class="copyright">Copyright &copy;</p>
     </footer>
 </body>
 
