--- a/portfolio.html
+++ b/portfolio.html
@@ -6,67 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>About Me</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
-    <div class="container">
-        <header>
+    <!--Header and Navigation-->
+    <header class="flex-container">
+        <nav>
             <h1>Andrew Weiss</h1>
-            <nav>
+            <div class="navigation">
                 <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li class="link"><a href="index.html">About</a></li>
+                    <li class="link"> <a href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-            </nav>
-        </header>
-    </div>
+            </div>
+        </nav>
+    </header>
+    <!--Main Content-->
     <div class="container">
-    <main>
-        <h2>Portfolio</h2>
-        <hr>
-        <div>
+        <main>
+            <h2>Portfolio</h2>
+            <hr>
             <ul>
-                <li>
-                    <img src="assets/images/image-1.jpg" alt="">
-                    <div class="text-block">
-                        <p>Image 1</p>
-                    </div>
+                <li class="portfolioList">
+                    <img src="assets/images/image-1.jpg" alt="Hangman">
+                    <h3>Hangman</h3>
                 </li>
-                <li><img src="assets/images/image-2.jpg" alt="">
-                    <div class="text-block">
-                        <p>Image 2</p>
-                    </div>
+                <li class="portfolioList">
+                    <img src="assets/images/image-2.jpg" alt="RPG Game">
+                    <h3>RPG Game</h3>
                 </li>
-                <li><img src="assets/images/image-3.jpg" alt="">
-                    <div class="text-block">
-                        <p>Image 3</p>
-                    </div>
+                <li class="portfolioList">
+                    <img src="assets/images/image-3.jpg" alt="Trivia Game">
+                    <h3>Trivia Game</h3>
                 </li>
-                <li>
-                    <img src="assets/images/image-4.jpg" alt="">
-                    <div class="text-block">
-                        <p>Image 4</p>
-                    </div>
+                <li class="portfolioList">
+                    <img src="assets/images/image-4.jpg" alt="Rutgers Info Widget">
+                    <h3>Rutgers Info Widget</h3>
                 </li>
-                <li>
-                    <img src="assets/images/image-5.jpg" alt="">
-                    <div class="text-block">
-                        <p>Image 5</p>
-                    </div>
-                </li>
-                <li>
-                    <img src="assets/images/image-6.jpg" alt="">
-                    <div class="text-block">
-                        <p>Image 6</p>
-                    </div>
+                <li class="portfolioList">
+                    <img src="assets/images/image-5.jpg" alt="Rock Paper Scissors">
+                    <h3>Rock Paper Scissors</h3>
                 </li>
             </ul>
-        </div>
-    </main>
+        </main>
+    </div>
     <footer>
-        <p>Copyright &copy;</p>
+        <p class="copyright">Copyright &copy;</p>
     </footer>
 </body>
 
