Add profile content and fix portfolio flex boxes

--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
                 <h2>About Me</h2>
                 <hr>
                 <img class="profile-pic" src="assets/images/Me.jpg" alt="Picture of me">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, nemo voluptate. Nesciunt odio sit
-                    odit?
-                    Et, adipisci tempora soluta voluptatibus sunt amet iusto dolor nam unde aut quas neque impedit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, atque eligendi? Eum, debitis at
-                    perferendis similique iusto deleniti, in reiciendis optio expedita nobis libero quasi. Id quisquam
-                    inventore commodi quia. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, atque eligendi? Eum, debitis at
-                    perferendis similique iusto deleniti, in reiciendis optio expedita nobis libero quasi. Id quisquam
-                    inventore commodi quia.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, atque eligendi? Eum, debitis at
-                    perferendis similique iusto deleniti, in reiciendis optio expedita nobis libero quasi. Id quisquam
-                    inventore commodi quia. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, atque eligendi? Eum, debitis at
-                    perferendis similique iusto deleniti, in reiciendis optio expedita nobis libero quasi. Id quisquam
-                    inventore commodi quia. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, atque eligendi? Eum, debitis at
-                    perferendis similique iusto deleniti, in reiciendis optio expedita nobis libero quasi. Id quisquam
-                    inventore commodi quia.</p>
+                <p>Hello, everyone! I’m Andrew and welcome to my website. Here you can find some information about me.
+                    Head to my portfolio to see some of the work I completed during my coding bootcamp at the University
+                    of Washington. Feel free to send me a message or ask a question via the contact page.</p>
+                <p>A little about myself, I’m a UW graduate with a degree in linguistics with eight years of teaching
+                    experience in Cambodia. I’ve been working as a first-grade teacher in the capitol Phnom Penh for the
+                    last two years and despite enjoying the profession immensely, I’m not interested in continuing down
+                    the career pathway in education stateside. Web development never really stood out to me until
+                    recently but being really detail-oriented and naturally interested in the syntax and logic of
+                    computer language has made me want to pursue it professionally. The design aspects of web
+                    development also appeal to my need for a creative outlet.</p>
+                <p>Outside of work and studying, I love to hike and travel. While living in Asia, I was able to travel
+                    regularly throughout the region. Hiking along Tiger Leaping Gorge in Yunnan Province of China was a
+                    highlight, as was jungle trekking and orangutan viewing in Borneo. Despite my love for travel I’m a
+                    bit of a homebody and prefer to spend my evening reading, watching YouTube or playing board games
+                    particularly Disney trivia games.</p>
             </main>
         </div>
         <footer>
