--- a/portfolio.html
+++ b/portfolio.html
@@ -28,30 +28,32 @@
         <main>
             <h2>Portfolio</h2>
             <hr>
-            <ul>
-                <li class="portfolioList">
-                    <img src="assets/images/image-1.jpg" alt="Hangman">
-                    <h3>Hangman</h3>
-                </li>
-                <li class="portfolioList">
-                    <img src="assets/images/image-2.jpg" alt="RPG Game">
-                    <h3>RPG Game</h3>
-                </li>
-                <li class="portfolioList">
-                    <img src="assets/images/image-3.jpg" alt="Trivia Game">
-                    <h3>Trivia Game</h3>
-                </li>
-                <li class="portfolioList">
-                    <img src="assets/images/image-4.jpg" alt="Rutgers Info Widget">
-                    <h3>Rutgers Info Widget</h3>
-                </li>
-                <li class="portfolioList">
-                    <img src="assets/images/image-5.jpg" alt="Rock Paper Scissors">
-                    <h3>Rock Paper Scissors</h3>
-                </li>
-            </ul>
+            <br>
+            <div class="flex-container">
+                <div class="flex-item">
+                        <img src="assets/images/image-1.jpg" alt="Hangman">
+                        <h3>Hangman</h3>
+                </div>
+                <div class="flex-item">
+                        <img src="assets/images/image-2.jpg" alt="RPG Game">
+                        <h3>RPG Game</h3>
+                </div>
+                <div class="flex-item">
+                        <img src="assets/images/image-3.jpg" alt="Trivia Game">
+                        <h3>Trivia Game</h3>
+                </div>
+                <div class="flex-item">
+                        <img src="assets/images/image-4.jpg" alt="Rutgers Info Widget">
+                        <h3>Rutgers Info Widget</h3>
+                </div>
+                <div class="flex-item">
+                        <img src="assets/images/image-5.jpg" alt="Rock Paper Scissors">
+                        <h3>Rock Paper Scissors</h3>
+                </div>
+            </div>
         </main>
     </div>
+    <br>
     <footer>
         <p class="copyright">Copyright &copy;</p>
     </footer>
